fix: back-to-top align with name

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -29,7 +29,7 @@
 .back-button {
   @media (min-width: 769px) {
     position: absolute;
-    top: 60%;
+    top: 65%;
     right: 96%;
     margin-right: 24px;
     transform: translateY(-50%);
